<resources>
    <string name="app_name">Gasto de Viagem</string>
    <string name="distancia">Distância</string>
    <string name="preco">Preço</string>
    <string name="autonomia">Autonomia</string>
    <string name="total_de_quilometros">Total de quilometros</string>
    <string name="preco_por_litros">Preço por litros</string>
    <string name="kms_por_litro">KMs por litro</string>
    <string name="gasto_total">Seu gasto Total será de:</string>
    <string name="calcular">CALCULAR</string>
    <string name="valor_totalrs">R$ 0</string>
    <string name="preencha_todos_campos">Preencha todos os campos!</string>
    <string name="informe_valores_validos">Informe valores válidos!</string>
</resources>
